--- a/source/css/pages/profile.sass
+++ b/source/css/pages/profile.sass
@@ -57,7 +57,7 @@
   background-attachment: fixed
   padding-bottom: 39%
   display: block
-  @media only screen and (min-width: $third-break)
+  @media only screen and (min-width: 1280px)
     background-position-y: top
 
 .profile-header
